--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
   <h1>goit-js-hw-11-color-switch!</h1>
+  <button type="button" data-action="start">Start</button>
+  <button type="button" data-action="stop">Stop</button>
 
     <script src="./index.js"></script>
   </body>
